# mgncs

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  README  README.md  RELEASE-NOTES.md  autogen.sh  buildlib-rtems  cmake_mgncsconfig.h.in  configure.ac  configure.in  makefile.ng  mgncs.pc.in  mgncs_msd.sln  mgncs_msd.vcproj  rules.make  win-funcs.c
include/: Makefile.am  hashtable.h  mabstractlist.h  makefile.ng  manimate.h  manimateframes.h  mbmparrayanimateframes.h  mbtree.h  mbutton.h  mbuttongroup.h  mcheckbutton.h  mchecknode.h  mcolorbutton.h  mcombobox.h  mcommon.h  mcomponent.h  mcontainer.h  mdatabinding.h  mdatasource.h  mdblist.h  mdialog.h  medit.h  mem-slab.h  mgifanimateframes.h  mgncs.h  mgroupbox.h  miconview.h  mimage.h  mimagebutton.h  mime-wordsel.h  mime.h  minvisible-component.h  mitem.h  mitem_manager.h  mitemview.h  mledstatic.h  mlist.h  mlist_layout.h  mlistbox.h  mlistcolumn.h  (+38 more)
include/pieces/: Makefile.am  mabstractbuttonpiece.h  makefile.ng  manimatepiece.h  marrowbuttonpiece.h  marrowpiece.h  mboxlayoutpiece.h  mbuttonboxpiece.h  mcheckboxpiece.h  mcheckbuttonpiece.h  mcontainerpiece.h  mdaygridpiece.h  mdownarrowpiece.h  mgridboxpiece.h  mhboxlayoutpiece.h  mhotpiece.h  mhspinboxpiece.h  mimagelabelpiece.h  mimagepiece.h  mlabelpiece.h  mlayoutpiece.h  mledstaticpiece.h  mleftarrowpiece.h  mlinelayoutpiece.h  mlistspinnedpiece.h  mmonthpiece.h  mnumspinnedpiece.h  mpairpiece.h  mprogresspiece.h  mpushbuttonpiece.h  mradioboxpiece.h  mradiobuttonpiece.h  mrectpiece.h  mrenderablepiece.h  mrightarrowpiece.h  mscrollbarpiece.h  mscrollthumbboxpiece.h  mseparatorpiece.h  msimplelistpiece.h  msliderpiece.h  (+13 more)
samples/: CMakeLists.txt  Makefile.am  configure.ac  configure.in
samples/src/: Makefile.am  colorbutton.c  container.c  data_binding.c  data_source.c  edit.c  helloworld_dlgbox.c  iconview.c  list.c  listbox.c  listview.c  monthcalender.c  panel.c  progressbar.c  propsheet.c  resmgr_main.c  scrollview.c  spinner.c  timer.c  trackbar.c
samples/src/res/: Makefile.am
src/: CMakeLists.txt  Makefile.am  hashtable.c  iconview_content_data.c  ledimages.c  mabstractlist.c  makefile.ng  manimate.c  manimateframes.c  mbmparrayanimateframes.c  mbmparrayanimateframes_win.c  mbmparrayanimateframes_win.h  mbtree.c  mbutton.c  mbuttongroup.c  mcheckbutton.c  mchecknode.c  mcolorbutton.c  mcombobox.c  mcommon.c  mcomponent.c  mcontainer.c  mctrls.c  mdatabinding.c  mdatasource.c  mdialog.c  medit.c  mem-slab.c  mgifanimateframes.c  mgroupbox.c  miconview.c  mimage.c  mimagebutton.c  mime-wordsel.c  minvisible-component.c  mitem.c  mitem_manager.c  mitemview.c  mledstatic.c  mlist.c  (+41 more)
src/datasource/: CMakeLists.txt  Makefile.am  comm_parser.c  comm_parser.h  minids.c  minids.h  msqlds.c  msqlds.h  mstaticds.c  mstaticds.h  mtextds.c  mtextds.h  mxmlds.c  mxmlds.h  str_expression.c  xquery.c  xquery.h
src/ime/: CMakeLists.txt  Makefile.am  charset-convert.c  digit_ime.c  mgpti_dict.c  mime.c  mpinyin-ime.c  mpti-ime.c  pinyin-dict.c  pinyin-idx.c
src/pieces/: CMakeLists.txt  Makefile.am  mabstractbuttonpiece.c  manimatepiece.c  marrowbuttonpiece.c  marrowpiece.c  mboxlayoutpiece.c  mbuttonboxpiece.c  mcheckboxpiece.c  mcheckbuttonpiece.c  mcontainerpiece.c  mdaygridpiece.c  mdownarrowpiece.c  mgridboxpiece.c  mhboxlayoutpiece.c  mhotpiece.c  mhspinboxpiece.c  mimagelabelpiece.c  mimagepiece.c  mlabelpiece.c  mlayoutpiece.c  mledstaticpiece.c  mleftarrowpiece.c  mlinelayoutpiece.c  mlistspinnedpiece.c  mmonthpiece.c  mnumspinnedpiece.c  mpairpiece.c  mprogresspiece.c  mpushbuttonpiece.c  mradioboxpiece.c  mradiobuttonpiece.c  mrectpiece.c  mrenderablepiece.c  mrightarrowpiece.c  mscrollbarpiece.c  mscrollthumbboxpiece.c  mseparatorpiece.c  msimplelistpiece.c  msliderpiece.c  (+14 more)
src/renderer/: CMakeLists.txt  Makefile.am  makefile.ng
src/renderer/classic/: CMakeLists.txt  Makefile.am  classic.c  classic_boxpieces.c  classic_combobox.c  classic_groupbox.c  classic_listview.c  classic_propsheet.c  classic_widget.c
src/renderer/fashion/: CMakeLists.txt  Makefile.am  fashion.c  fashion_boxpieces.c  fashion_combobox.c  fashion_common.c  fashion_common.h  fashion_groupbox.c  fashion_listview.c  fashion_propsheet.c  fashion_widget.c
src/renderer/flat/: CMakeLists.txt  Makefile.am  flat.c  flat_boxpieces.c  flat_combobox.c  flat_groupbox.c  flat_listview.c  flat_propsheet.c  flat_widget.c
src/renderer/skin/: CMakeLists.txt  Makefile.am  makefile.ng  skin.c  skin_boxpieces.c  skin_combobox.c  skin_groupbox.c  skin_listview.c  skin_propsheet.c  skin_widget.c
test/: CMakeLists.txt  Makefile.am  animation.c  autogen.sh  bindtest.c  button.c  checkbutton.c  colorbutton.c  combobox.c  commrdrtest.c  configure.ac  configure.in  container.c  groupbox.c  iconview.c  image.c  imagebutton.c  ledstatic.c  list.c  list_group.c  listbox.c  listview.c  mainwnd.c  menubutton.c  mledit.c  monthcalendar.c  name2value.c  progressbar.c  propsheet.c  radiogroup.c  rectangle.c  resdump.c  scrollbar.c  scrollview.c  separator.c  sledit.c  spinbox.c  spinner.c  static.c  staticds.c  (+5 more)
test/databinding/: .cproject  .project  Makefile.am  MiniGUI.cfg  controls.ini
test/databinding/include/: ncs-windows.h  resource.h
test/databinding/res/: databinding.res  res.project
test/databinding/res/renderer/: rdr.xml
test/databinding/res/text/: en_US.txt  id.xml
test/databinding/res/ui/: id.xml  main.xml
test/databinding/src/: databinding_main.c  main.c
test/datasource/: .cproject  .project  Makefile.am  MiniGUI.cfg  ReadMe  book.xml  test.db  test.ini  test.txt
test/datasource/Debug/: makefile  objects.mk
test/datasource/include/: ncs-window-types.h  ncs-windows.h  resource.h
test/datasource/res/: MiniGUI.cfg  datasource.res  res.project
test/datasource/src/: datasource.c  datasource_main.c  open_ds.c  selectdlg.c
test/imetest/: .cproject  .project  Makefile.am  ReadMe
test/imetest/include/: mobile-ime.h  ncs-window-types.h  ncs-windows.h  resource.h
test/imetest/res/: res.project
test/imetest/src/: ime-view.c  imetest.c  imetest_main.c  mobile-ime.c
(+27 files in other folders)
